# shine-lmpcc

./: .gitignore  README.md  dvc.yaml
lmpcc/: 00_setup_solver_venv.sh  01_set_system.sh  02_generate_solver.sh  11-setup-doc-environment.sh  12-build-and-open-documentation.sh  CMakeLists.txt  Doxyfile  copy_config_to_prius.sh  lmpcc.rosinstall  package.xml
lmpcc/cfg/: PredictiveController_Carla.cfg  PredictiveController_HovergamesGazebo.cfg  PredictiveController_Jackal.cfg  PredictiveController_JackalSocnavbench.cfg  PredictiveController_Prius.cfg  PredictiveController_Roboat.cfg  PredictiveController_SimpleSim.cfg  saved.cfg
lmpcc/config/: costmap_dynamic_params.yaml  costmap_static_params.yaml  homotopy.yaml  jackalsimulator_autotune_parameters.yaml  path.yaml  twoped_crossing_static.yaml
lmpcc/config/carla/: carla_parameters.yaml  carla_topics.yaml  homotopy.yaml
lmpcc/config/hovergames/: hovergames_parameters.yaml  hovergames_topics.yaml
lmpcc/config/jackal/: experiment_path.yaml  guidance_planner.yaml  jackal_guidance_planner.yaml  jackal_parameters.yaml  jackal_roadmap.yaml  jackal_simulator_parameters.yaml  jackal_simulator_topics.yaml  jackal_topics.yaml  jackalsimulator_autotune_parameters.yaml  pedestrian_simulator.yaml
lmpcc/config/prius/: path.yaml  prius_parameters.yaml  prius_topics.yaml
lmpcc/config/roboat/: roboat_parameters.yaml  roboat_topics.yaml
lmpcc/config/simplesim/: guidance_planner.yaml  simplesim_parameters.yaml
lmpcc/docs/: conf.py  implementation_diagram.drawio  index.rst
lmpcc/docs/pages/: changelog.md  controller_code.rst  getting_started.rst  interface_code.rst  overview.rst  solver_architecture.rst  system_specific.rst  tools.rst
lmpcc/include/interfaces/: carla_interface.h  hovergamesgazebo_interface.h  interface.h  jackal_interface.h  jackalsimulator_interface.h  jackalsocnavbench_interface.h  prius_interface.h  roboat_interface.h  simplesim_interface.h
lmpcc/include/lmpcc/: dynamic_obstacle.h  experiment-util.h  lmpcc_configuration.h  lmpcc_controller.h  lmpcc_controller_on_demand.h  types.h
lmpcc/include/modules_constraints/: ellipsoidal_constraints.h  gaussian_constraints.h  guidance_constraints.h  linearized_constraints.h  scenario_constraints.h
lmpcc/include/modules_objectives/: goal_tracking.h  guidance_objective.h  mpc_base.h  reference_path.h  reference_velocity.h
lmpcc/include/scenario/: gaussian_sampler.h  json_trajectory_sampler.h  polygon_search.h  safe_horizon.h  safety_certifier.h  sampler.h  scenario_manager.h  smpcc.h  trajectory_sampler.h
lmpcc/launch/: lmpcc_standalone.launch  stixels_validation.launch
lmpcc/launch/carla/: carla.launch
lmpcc/launch/hovergames/: hovergamesgazebo.launch
lmpcc/launch/jackal/: jackal.launch  jackal_practice.launch  jackal_practice_baselines.launch  jackalsimulator.launch  jackalsimulator_pedsim.launch  only_server.launch  socnavbench_shine.launch
lmpcc/launch/prius/: prius.launch
lmpcc/launch/roboat/: roboat.launch  roboat_realworld.launch  roboat_simulation.launch
lmpcc/launch/simplesim/: simplesim.launch  simplesim_python_PID_follower.launch
lmpcc/rviz_config/: rviz_config.rviz
lmpcc/rviz_config/carla/: rviz_config_front_camera.rviz  rviz_config_top_camera.rviz  rviz_config_top_camera_video.rviz  rviz_safe-horizon.rviz
lmpcc/rviz_config/jackal/: homotopy_topview.rviz  jackal_fpv.rviz  jackal_homotopy.rviz  jackal_simulator.rviz  screenshot-3d-config.rviz  screenshots-uvd-homology.rviz
lmpcc/scripts/: LoadROSData.m  README.md  json_read.cpp  main.py  observation_partitioning_node.py  partition.py  plot_trajectory.py  recording_to_samples.py  run_guidance_server.sh  split_experiments.m
lmpcc/scripts/python/: plot_reference.py
lmpcc/src/: collision_checker_node.cpp  dynamic_obstacle.cpp  experiment-util.cpp  lmpcc_configuration.cpp  lmpcc_control_node.cpp  lmpcc_control_server.cpp  lmpcc_controller.cpp  lmpcc_controller_on_demand.cpp  types.cpp
lmpcc/src/interfaces/: carla_interface.cpp  hovergamesgazebo_interface.cpp  interface.cpp  jackal_interface.cpp  jackalsimulator_interface.cpp  jackalsocnavbench_interface.cpp  prius_interface.cpp  roboat_interface.cpp  simplesim_interface.cpp
lmpcc/src/modules_constraints/: ellipsoidal_constraints.cpp  gaussian_constraints.cpp  guidance_constraints.cpp  linearized_constraints.cpp  scenario_constraints.cpp
lmpcc/src/modules_objectives/: goal_tracking.cpp  guidance_objective.cpp  mpc_base.cpp  reference_path.cpp
lmpcc/src/scenario/: gaussian_sampler.cpp  json_trajectory_sampler.cpp  polygon_search.cpp  safe_horizon.cpp  safety_certifier.cpp  sampler.cpp  smpcc.cpp  trajectory_sampler.cpp
lmpcc_follower/: CMakeLists.txt
lmpcc_follower/cfg/: simplesim.cfg
lmpcc_follower/config/simplesim/: params.yaml
lmpcc_follower/include/lmpcc_follower/: configuration.h  follower.h  pid_stanley.h
lmpcc_follower/launch/: follower.launch
lmpcc_follower/src/: configuration.cpp  follower.cpp  follower_node.cpp  pid_stanley.cpp
lmpcc_msgs/: CMakeLists.txt
lmpcc_msgs/msg/: Force.msg  InfoMPC.msg  SimpleObstacle.msg  SimpleObstacleArray.msg  follower.msg  follower_state.msg  observation_partitioning.msg  obstacle_array.msg  obstacle_gmm.msg
lmpcc_msgs/srv/: SolveMPC.srv
lmpcc_solver/: CMakeLists.txt  package.xml  setup.py
lmpcc_solver/scripts/: control_modules.py  dynamics.py  generate_cpp_files.py  helpers.py  inequality.py  objective.py  online_dynamics_server.py  setup_venv.sh  systems.py
lmpcc_solver/scripts/hovergames/: hovergames_settings.py  hovergames_solver.py
lmpcc_solver/scripts/jackal/: jackal_settings.py  jackal_solver.py
lmpcc_solver/scripts/prius/: prius_settings.py  prius_solver.py
lmpcc_solver/scripts/roboat/: roboat_settings.py  (+1 more)
lmpcc_solver/srv/: PropagateDynamics.srv
lmpcc_tools/: CMakeLists.txt  dvc.yaml  lmpccToolsConfig.cmake  lmpcc_toolsConfigVersion.cmake  package.xml
lmpcc_tools/nodes/: goal_publishing_node.py
lmpcc_tools/scripts/: analysis.py  autotune.py  compare.py  helpers.py  load_ros_data.py  metrics.py  visuals.py
lmpcc_tools/src/: collision_region.cpp
(+41 files in other folders)
