<?xml version="1.0"?>
<package format="2">
  <name>lmpcc_tools</name>
  <version>0.6.14</version>
  <description>The Local Model Predictive Contouring Control for Dynamic Environments package</description>

  <maintainer email="bruno.debrito@tudelft.nl">Bruno Brito</maintainer>
  <author>Bruno Brito</author>
  <license>GPUv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>lmpcc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  
</package>
